<resources>
    <string name="app_name">UAS NMIMS</string>
    <string name="Settings">Profile</string>
    <string name="Logout">Logout</string>
    <string name="Username">User Name</string>
    <string name="Useremail">User Email</string>
    <string name="Dashboard">Team Dashboard</string>
    <string name="Worklogs">Work Logs</string>
    <string name="Addwork">Add Work</string>
    <string name="Flightlogs">Flight Logs</string>
    <string name="Addflights">Add Flights</string>
    <string name="Addmeetings">Add Meetings</string>
    <string name="Meetingslogs">Meeting Logs</string>
    <string name="calendar">Calendar</string>
    <string name="m1">Login</string>
    <string name="m2">Username</string>
    <string name="m3">Password</string>
    <string name="m4">Not yet registered? SignUp Now</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="mar_2024">Mar 2024</string>
    <string name="_1">1</string>
    <string name="submit">Submit</string>
    <string name="developer_name">Developer Name</string>
    <string name="task_description">Task Description</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="work_date">Work Date</string>
    <string name="flight_date">Flight Date</string>
    <string name="select_drone_name">Select Drone Name</string>
    <string name="description">Description</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="meeting_type">Year</string>
    <string name="time_hh_mm">Time (HH:MM)</string>
    <string name="date_yyyy_mm_dd">Date (YYYY-MM-DD)</string>
    <string name="meeting_title">Meeting Title</string>
    <string name="add_new_meeting">Add New Meeting</string>
    <string name="work_log">Work-log</string>
    <string name="select_drone">Select Drone</string>
    <string name="flight_log">Flight Log</string>
    <string name="pilot_name">Pilot Name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string-array name="meeting_types">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
        <item>Leads</item>
        <item>Team Meeting</item>
    </string-array>
    <string-array name="drone">
        <item>Priya</item>
        <item>Reptile</item>
        <item>VTOL</item>
        <item>Black Peafowl</item>
        <item>Neel</item>
        <item>Nitin</item>
        <item>Mukesh</item>
        <item>Fixed Wing(Prop-Breaker)</item>
        <item>MTD Extended</item>
        <item>MTD</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="drone">Drone</string>
    <string name="name">Name</string>
    <string name="flight_logs">Flight Logs</string>
    <string name="no_meetings_scheduled_for_this_date">No meetings scheduled for this date.</string>
    <string name="weekly_calendar">Weekly Calendar</string>
    <string name="about_us">About Us</string>
    <string name="about_uas_nmims">About UAS NMIMS</string>
    <string name="easify_work_processes_and_embrace_a_paperless_environment_built_to_simplify_and_enhance_efficiency_at_nmims">Easify work processes and embrace a paperless environment. Built to simplify and enhance efficiency at NMIMS.</string>
    <string name="harsh_jain">Harsh Jain</string>
    <string name="view_linkedin">View LinkedIn</string>
    <string name="_2024_nmims_all_rights_reserved">© 2024 NMIMS. All Rights Reserved.</string>
    <string name="shubham_agrawal">Shubham Agrawal</string>
    <string name="kapil_agrawal">Kapil Agrawal</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="select_branch">Select Branch</string>
    <string name="sap_id_11_digits">SAP ID (11 digits)</string>
    <string name="roll_number">Roll Number</string>
    <string name="phone_10_digits">Phone (10 digits)</string>
    <string name="fill_your_details">Fill Your Details</string>
    <string name="b_tech_aiml">B.Tech AIML</string>
    <string name="b_tech_ce">B.Tech CE</string>
    <string name="b_tech_cs">B.Tech CS</string>
    <string name="b_tech_it">B.Tech IT</string>
    <string name="mba_tech_ce">MBA Tech CE</string>
    <string name="save">Save</string>
    <string name="enter_branch">Enter Branch</string>
    <string name="branch">Branch:</string>
    <string name="enter_sap">Enter SAP</string>
    <string name="sap">SAP:</string>
    <string name="enter_roll">Enter Roll</string>
    <string name="roll">Roll:</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="phone">Phone:</string>
    <string name="enter_name">Enter Name</string>
    <string name="names">Name:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello">Hello,</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>