<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1">
    <item
        android:icon="@drawable/dashboard"
        android:id="@+id/navDashboard"
        android:title="@string/Dashboard"
        />
    <item
        android:icon="@drawable/calendar"
        android:id="@+id/navCalendar"
        android:title="@string/calendar"
        />
    </group>
    <group
        android:id="@+id/group2">
    <item
        android:icon="@drawable/worklogs"
        android:id="@+id/navWorkLogs"
        android:title="@string/Worklogs"
        />
    <item
        android:icon="@drawable/addwork"
        android:id="@+id/navAddLogs"
        android:title="@string/Addwork"
        />
    </group>
    <group
        android:id="@+id/group3">
    <item
        android:icon="@drawable/flightlogs"
        android:id="@+id/navFlightlogs"
        android:title="@string/Flightlogs"
        />
    <item
        android:icon="@drawable/addflight"
        android:id="@+id/navAddFlight"
        android:title="@string/Addflights"
        />
    </group>
    <group
        android:id="@+id/group4">
    <item
        android:icon="@drawable/meetinglog"
        android:id="@+id/navMeetinglogs"
        android:title="@string/Meetingslogs"
        />
    <item
        android:icon="@drawable/addmeeting"
        android:id="@+id/navAddMeetings"
        android:title="@string/Addmeetings"
        />
    </group>

</menu>